# AIMv6

./: README.md  configure.ac  loongson3a.configure  modules.am  msim-gdb.patch
boot/arch/i386/: bootmain.c
doc/: fs-walkthrough-1.md  fs-walkthrough-2.md  fs-walkthrough-3.md  fs.md  rootfs.md  toolchain.md
drivers/: Makefile.am
drivers/ata/: Makefile.am  ata_ide.c  ata_ide_pio.c
drivers/block/: Makefile.am  msim-ddisk-kernel.c  msim-ddisk.h
drivers/common/: core.c
drivers/console/: Makefile.am  cons.c  cons.h
drivers/hd/: dos.c  hd.h  partition.c
drivers/interrupt-controller/: Makefile.am  i8259.c
drivers/io/: Makefile.am  bus-mapper.c  io-mem.c  io-port.c
drivers/pci/: pci.c
drivers/sd/: Makefile.am  sd-zynq.c
drivers/serial/: uart-msim-kernel.c  uart-ns16550-kernel.c  uart-zynq-hw.h  uart-zynq.c
drivers/timer/: Makefile.am  timer-a9-hw.h  timer-a9.c  timer.h
drivers/tty/: default.c  tty.c
firmware/arch/armv7a/: fwmain.c
fs/: bio.c  init.c  mount.c  namei.c  namei.h  spec.c  uio.c  vfs.h  vnode.c  vnode.h
fs/ufs/: inode.h  vop.c
fs/ufs/ext2fs/: Makefile.am  alloc.c  attr.c  bio.c  bmap.c  create.c  dinode.h  dir.c  dir.h  ext2fs.c  ext2fs.h  inode.c  lookup.c  mount.c  readwrite.c  reclaim.c  sync.c  vget.c
include/: dirent.h  fcntl.h  file.h  gfp.h  limits.h  mp.h  panic.h  pipe.h  pmm.h  proc.h  util.h
include/aim/: console.h  device.h  sync.h
include/arch/armv7a/: arch-irq.h  arch-sync.h  arch-trap.h  mmu.h  regs.h  smp.h
include/arch/armv7a/mach-zynq/: mach-conf.h  mach.h
include/arch/mips/mach-msim/: mach-conf.h
include/sys/: stat.h  types.h
kern/: Makefile.am
kern/arch/armv7a/: Makefile.am  arch_init.c  mm.c  proc.c  switch.S  trap.c  vector.S  vmaim.lds.S
kern/arch/armv7a/core-cortexa9/: Makefile.am  interrupt.c
kern/arch/armv7a/mach-zynq/: Makefile.am  mach-init.c  smp.c
kern/arch/mips/: entry.S
kern/arch/mips/mach-loongson3a/: Makefile.am  interrupt.c  timer.c  tty.c
kern/arch/mips/mach-msim/: Makefile.am  timer.c
kern/file/: Makefile.am  pipe.c  vnode.c
kern/init/: init.c
kern/mm/: test.c  uvm.c
kern/mm/kmmap/: Makefile.am  early_kmmap.c  ff.c  kmmap.c
kern/mm/pmm/: ff.c  pmm.c
kern/mm/vmm/: flff.c  slab.c  vmm.c
kern/proc/: initproc.c  proc.c
kern/syscall/: Makefile.am  chdir.c  close.c  dup.c  execve.c  fork.c  getpid.c  link.c  lseek.c  open.c  pipe.c  read.c  sync.c  unlink.c  write.c
lib/libc/: Makefile.am  dirent.h  fcntl.h  printf.c  scanf.c  stddef.h  stdio.h  string.h  syscall-list.S  syscalls.h  unistd.h
user/sbin/init/: init.c
(+4 files in other folders)
